# flight-status-board

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  app.js  config.txt  docker-compose.yml  index.html  package-lock.json  package.json  server.js  style.css
backend/: CMakeLists.txt  Makefile  server.c  server.js
backend/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  flight-status-board
backend/src/: api.c  api.h  flight_data.c  flight_data.h  main.c
frontend/: app.js  index.html  styles.css
frontend/css/: style.css
frontend/js/: api.js  app.js
public/: app.js  index.html  style.css
public/css/: style.css
public/js/: api.js  app.js
tests/: api.test.js  data-integrity.test.js  frontend.test.js
